﻿[B]1.0.5[/B](2011/11/28)
- 修复优酷搜索不到结果的Bug(2011/11/26)
- 增加优酷直搜的站内电影和电视剧资源(高亮显示)

[B]1.0.4[/B](2011/07/14)
- 修复优酷搜索出来的视频没有缩略图的bug
- 增加搜索历史记录功能和设置项

[B]1.0.3[/B](2011/07/13)
- 增加对奇艺视频和腾讯视频的支持

[B]1.0.2[/B](2011/07/12)
- 大幅修改，只保留了原来的插件id，使用百度输入法，需要安装基于百度输入法的中文输入法插件
     支持搜狐高清和优酷视频

[B]1.0.1[/B](2011/01/29)
- 修改适应google搜索的变化

[B]1.0.0[/B](2010/07/25)
- 初始加入中文扩展功能库