@@ -1,4 +1,7 @@
-﻿[B]1.0.5[/B](2011/11/28)
+﻿[B]1.1.0[/B](2012/1/8)
+- 按eden版要求禁用os.getcwd()，采用插件的profile目录保存临时文件和history.txt
+
+[B]1.0.5[/B](2011/11/28)
 - 修复优酷搜索不到结果的Bug(2011/11/26)
 - 增加优酷直搜的站内电影和电视剧资源(高亮显示)
 
